Fixed issues with font-rendering in Windows Chrome by increasing font sizes

--- a/web/quasar-variables.sass
+++ b/web/quasar-variables.sass
@@ -18,3 +18,7 @@ $generic-border-radius : 12px
 $button-border-radius : 12px
 $shadow-color: #333
 $dark-shadow-color: #000
+
+// Fix issues with font rendering in Windows with sub-tenth values.
+$body2: (size: 0.9rem)
+$h6: (size: 1.3rem, weight: 700)
