--- a/web/quasar-variables.sass
+++ b/web/quasar-variables.sass
@@ -1,6 +1,7 @@
 // @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;500;700;900&display=swap')
 
-$typography-font-family : 'M Plus Rounded 1c', sans-serif !default
+// $typography-font-family : 'M Plus Rounded 1c', sans-serif !default
+$typography-font-family : 'M PLUS 2', sans-serif !default
 
 $primary   : #333
 $secondary : #eceade
